...
        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:theme="@style/Theme.TextInputLayOut">

            <EditText
                android:id="@+id/email_input"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:hint="@string/email_hint"
                android:inputType="textEmailAddress"
                android:textColor="@color/mainColor"
                android:fontFamily="sans-serif"/>
...
        <!-- Password -->
        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:theme="@style/Theme.TextInputLayOut">
            <EditText
                android:id="@+id/password_input"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:textColor="@color/mainColor"
                android:fontFamily="sans-serif"/>
...
